maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:22: error: not found: value xBaggle
var x = xBaggle
        ^JediEscaper:23: error: not found: value yBaggle
var y = yBaggle
        ^